--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
-  }
+    "incremental": true,
+    "strict": true
+  },
+  "exclude": ["node_modules", "dist"]
 }
