--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
+  "arrowParens": "avoid",
   "singleQuote": true,
+  "bracketSpacing": true,
   "printWidth": 120,
   "semi": true,
   "trailingComma": "all"
