--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,12 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@app/*": [
+        "src/*"
+      ]
+    }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["*/node_modules", "dist"]
 }
