--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.3",
-    "@nestjs/config": "^1.1.5",
-    "@nestjs/core": "^8.2.3",
-    "@nestjs/mongoose": "^9.0.1",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.2.3",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.2.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^8.0.5",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/testing": "^9.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
@@ -49,6 +49,7 @@
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
